Added product range/similar products API and test cases for user,ptoduct,auth module,cart
