# swagger/swagger.yaml
@@ -253,6 +253,38 @@ paths:
             type: string
       security: 
       - authorization: []
+  /api/products/{productId}/similarProducts:
+    get:
+      tags:
+        - Product
+      summary: Get Products of similar specification 
+      description: Get Products of similar specification 
+      operationId: getSimilarProducts
+      produces:
+        - application/json
+      parameters:
+      - name: "productId"
+        in: "path"
+        description: "_id of product to return"
+        required: true
+        type: "string"
+      - name: "page"
+        in: "query"
+        description: "Page Number"
+        required: false
+        type: "string"
+      - name: "limit"
+        in: "query"
+        description: "Record limit"
+        required: false
+        type: "string"
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+      security: 
+      - authorization: []
   /api/products/getProductReviewById/{productId}:
     get:
       tags:
@@ -674,6 +706,11 @@ paths:
       - name: "brandId"
         in: "query"
         description: "_id of brand to return"
+        required: false
+        type: "string"
+      - name: "range"
+        in: "query"
+        description: "price range as 500-1000"
         required: false
         type: "string"
       responses:
